<resources>
    <string name="app_name">Delivery Fast</string>
    <string name="Bienvenida1">Delivery Fast</string>
    <string name="Bienvenida2">Tu pedido siempre caliente</string>
    <string name="Bienvenida3">Bienvenido, Eliga una opciion para elegir su almuerzo</string>
    <string name="descrip">Comida</string>

    <string name="boton1">Menú</string>
    <string name="boton2">Carta</string>

    <string name="mensaje">¿Que platos desea?</string>

    <string name="plato1">Seco de pollo</string>

    <string name="precio">S/ 15</string>
    <string name="precioCarta">S/ 25</string>


    <string name="plato2">Tallarines con chuleta</string>
    <string name="plato3">Arroz con pollo</string>
    <string name="plato4">Lomo saltado</string>
    <string name="plato5">Picante de carne</string>
    <string name="plato6">Locro de zapallo</string>

    <string name="finished_message">Los pedidos que realizó son:</string>
    <string name="pay_method_message">¿Qué medio de pago desea seleccionar?</string>
    <string name="monto">Total: %1$d</string>
    <string name="money">Efectivo</string>
    <string name="card">Tarjeta</string>
    <string name="confirmar_pago">Confirmar</string>


    <string name="plato7">Chaufa Especial</string>
    <string name="plato8">Bisteck a lo pobre</string>
    <string name="plato9">Lomo fino al jugo</string>
    <string name="plato10">Costillas de cerdo</string>
    <string name="plato11">Tallarines Con milanesa</string>
    <string name="plato12">Cordon Bleu</string>


    <string name="pedir">Pedir</string>
    <string name="title_activity_confrimarcion">Confrimarcion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="Confirmacion1">Gracias por su compra</string>
    <string name="Confirmacion2">Su pedido es el siguiente</string>


    <string name="Total">Total</string>
    <string name="Confirmacion3">Su pedido está siendo preparado</string>

    <string name="nuevo">Nuevo Pedido</string>
    <string name="salir">Salir</string>



</resources>