<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="40dp"
    android:background="@drawable/fondo1"
    tools:context=".Confirmacion">


    <TextView
        android:id="@+id/textview_confirmacion_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Confirmacion1"
        android:textSize="40sp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/pastel5"/>

    <TextView
        android:id="@+id/textview_confirmacion_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Confirmacion2"
        android:textSize="30sp"
        android:textColor="@color/pastel5"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/textview_confirmacion_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/monto"
        android:textSize="30sp"
        android:textColor="@color/pastel5"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/textview_confirmacion_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/pastel5"
        android:text="@string/Confirmacion3"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttom_nuevo"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/pedir"/>

        <Button
            android:id="@+id/buttom_salir"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/salir"/>

    </LinearLayout>


</LinearLayout>