<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/fondo1"
    android:padding="35dp"
    tools:context=".Carta">


    <TextView
        android:id="@+id/textview_menu_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/boton2"
        android:textSize="40sp"
        android:textColor="@color/pastel5"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/textview_menu_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mensaje"
        android:textSize="30sp"
        android:textColor="@color/pastel5"
        android:layout_marginBottom="20dp"/>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/plato7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plato7"

            />

        <TextView
            android:id="@+id/precio7"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignEnd="@+id/plato7"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:text="@string/precioCarta"
            android:textColor="@color/black" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/plato8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plato8"

            />

        <TextView
            android:id="@+id/precio8"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/precioCarta"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_alignEnd="@+id/plato8"
            android:textColor="@color/black"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/plato9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plato9"

            />

        <TextView
            android:id="@+id/precio9"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/precioCarta"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_alignEnd="@+id/plato9"
            android:textColor="@color/black"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/plato10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plato10"

            />

        <TextView
            android:id="@+id/precio10"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/precioCarta"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_alignEnd="@+id/plato10"
            android:textColor="@color/black"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/plato11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plato11"

            />

        <TextView
            android:id="@+id/precio11"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/precioCarta"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_alignEnd="@+id/plato11"
            android:textColor="@color/black"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/plato12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plato12"

            />

        <TextView
            android:id="@+id/precio12"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/precioCarta"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_alignEnd="@+id/plato12"
            android:textColor="@color/black"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/pedir"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pedir"/>


</LinearLayout>