<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fondo1"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView_main_1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/pastel5"
        android:text="@string/Bienvenida3"
        />

    <ImageView
        android:id="@+id/imageView_main_1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat = "@drawable/lomo"
        android:scaleType="fitXY"
        android:contentDescription="@string/descrip"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/boton1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/boton1"
            android:layout_margin="15dp"/>

        <Button
            android:id="@+id/boton2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/boton2"
            android:layout_margin="15dp"/>


    </LinearLayout>




</LinearLayout>