<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@drawable/fondo1"
    tools:context=".Splash">

    <TextView
        android:id="@+id/textView_1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/Bienvenida1"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>


    <ImageView
        android:id="@+id/imageView_1"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/delivery"
        android:scaleType="fitXY"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/textView_2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/Bienvenida2"
        android:textSize="20sp"

        android:gravity="center"/>






</LinearLayout>